Fixed datagrid with no results on smaller viewports.

--- a/stylesheets/_datagrid.scss
+++ b/stylesheets/_datagrid.scss
@@ -248,8 +248,14 @@ tr.row--warning {
 tr.row--no-results {
   background-color: $off-white;
   td {
+    display: table-cell;
     height: ($line-height-base * 1.8) * 3;
     text-align: center;
+    vertical-align: inherit;
+
+    &:before {
+      display: none;
+    }
   }
   a {
     color: $link-color;
